# PiPowerSupply

./: .directory  .gitignore
Control/: makefile
Control/src/: BatteryUtils.hpp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.af31a4b  Controller.cpp  Controller.hpp  Converters.cpp  Converters.hpp  InputBoard.cpp  InputBoard.hpp  Logger.cpp  Logger.hpp  MCP3204.cpp  MCP3204.hpp  MCP4922.cpp  MCP4922.hpp  Makefile  OutputBoard.cpp  OutputBoard.hpp  PSUController  PSUController.cbp  PersistentConfiguration.cpp  SPISlaveSimulator.cpp  SPISlaveSimulator.hpp  Tester.cpp  Tester.hpp  cmake_install.cmake  constants.hpp  main.cpp  pin.hpp
Control/src/controller/: Controller.cpp  Controller.hpp
Control/src/features/: BatteryUtils.cpp  Logger.hpp
Control/src/io_abstraction/: Converters.cpp  Converters.hpp  InputBoard.cpp  PersistentConfiguration.hpp
Control/src/utils/: IPCHandler.cpp  IPCHandler.hpp  MCP4922.hpp  constants.hpp
SpectrumAnalyzer/: fft_fwd.c  fft_fwd.c.save  fft_rev.c  makefile
SpectrumAnalyzer/fftlib/: fft.cpp  fft.hpp  main  main.cpp  makefile
UserInterface/: Controller.cpp  Controller.hpp  FrequencyGenerator.h  IPCHandler.cpp  IPCHandler.h  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PowerSupplyScreen.cpp  PowerSupplyScreen.h  PowerSupplyScreen.hpp  PowerSupplyUI.pro  SplashScreen.cpp  SplashScreen.h  SplashScreen.ui  frequencygenerator.cpp  frequencygenerator.hpp  frequencygenerator.ui  main.cpp  powersupplyscreen.ui
peripherals/arduino/: Makefile  inputBoard.cpp  rprintf.h  uart.c  uart.h  wiring.c
peripherals/inputBoard/: constants_inputBoard.h  inputBoard.ino
(+2 files in other folders)
